<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.0.1</version>
    </parent>

    <groupId>no.nav.data</groupId>
    <artifactId>polly</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <modules>
        <module>polly-app</module>
        <module>polly-test</module>
    </modules>

    <properties>
        <java.version>21</java.version>
        <lombok.version>1.18.42</lombok.version>
        <start-class>no.nav.data.AppStarter</start-class>
        <springdoc-openapi-starter-webmvc-ui.version>2.8.14</springdoc-openapi-starter-webmvc-ui.version>
        <simpleclient.version>0.16.0</simpleclient.version>
        <logstash-logback-encoder.version>9.0</logstash-logback-encoder.version>
        <docx4j.version>11.5.9</docx4j.version>
        <google-cloud-bigquery.version>2.38.2</google-cloud-bigquery.version>

        <microsoft-graph.version>6.60.0</microsoft-graph.version>
        <msal4j.version>1.23.1</msal4j.version>
        <graphql.version>24.0</graphql.version>

        <!-- transitive versions -->
        <commons-compress.version>1.28.0</commons-compress.version>
        <commons-io.version>2.21.0</commons-io.version>
        <guava.version>33.5.0-jre</guava.version>
        <jna.version>5.18.1</jna.version>
        <jetbrains.annotation.version>26.0.2-1</jetbrains.annotation.version>
        <stax2-api.version>4.2.2</stax2-api.version>

        <!-- Test -->
        <testcontainers.version>2.0.2</testcontainers.version>
        <wiremock.version>2.27.2</wiremock.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>

        <!-- GraphQL -->
        <dependency>
            <groupId>org.springframework.graphql</groupId>
            <artifactId>spring-graphql</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-graphql</artifactId>
        </dependency>

        <dependency>
            <groupId>com.graphql-java</groupId>
            <artifactId>graphql-java-extended-scalars</artifactId>
            <version>${graphql.version}</version>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.microsoft.kiota</groupId>
                <artifactId>microsoft-kiota-abstractions</artifactId>
                <version>1.8.12</version>
            </dependency>
            <dependency>
                <groupId>com.azure</groupId>
                <artifactId>azure-core</artifactId>
                <version>1.57.1</version>
            </dependency>
            <dependency>
                <groupId>com.microsoft.kiota</groupId>
                <artifactId>microsoft-kiota-serialization-json</artifactId>
                <version>1.9.0</version>
            </dependency>
            <dependency>
                <groupId>com.microsoft.kiota</groupId>
                <artifactId>microsoft-kiota-serialization-form</artifactId>
                <version>1.9.0</version>
            </dependency>
            <dependency>
                <groupId>com.microsoft.kiota</groupId>
                <artifactId>microsoft-kiota-serialization-multipart</artifactId>
                <version>1.9.0</version>
            </dependency>
            <dependency>
                <groupId>com.microsoft.kiota</groupId>
                <artifactId>microsoft-kiota-serialization-text</artifactId>
                <version>1.9.0</version>
            </dependency>
            <dependency>
                <groupId>com.microsoft.kiota</groupId>
                <artifactId>microsoft-kiota-authentication-azure</artifactId>
                <version>1.9.0</version>
            </dependency>
            <dependency>
                <groupId>com.microsoft.kiota</groupId>
                <artifactId>microsoft-kiota-http-okHttp</artifactId>
                <version>1.9.0</version>
            </dependency>
            <dependency>
                <groupId>commons-logging</groupId>
                <artifactId>commons-logging</artifactId>
                <version>1.3.5</version>
            </dependency>
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${springdoc-openapi-starter-webmvc-ui.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-compress</artifactId>
                <version>${commons-compress.version}</version>
            </dependency>
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>${commons-io.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>org.checkerframework</groupId>
                        <artifactId>checker-qual</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>com.google.guava</groupId>
                        <artifactId>failureaccess</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>net.java.dev.jna</groupId>
                <artifactId>jna</artifactId>
                <version>${jna.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.cloud</groupId>
                <artifactId>libraries-bom</artifactId>
                <version>26.74.0</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.microsoft.graph</groupId>
                <artifactId>microsoft-graph</artifactId>
                <version>${microsoft-graph.version}</version>
            </dependency>
            <dependency>
                <groupId>com.microsoft.azure</groupId>
                <artifactId>msal4j</artifactId>
                <version>${msal4j.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>com.nimbusds</groupId>
                        <artifactId>oauth2-oidc-sdk</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>net.java.dev.jna</groupId>
                <artifactId>jna-platform</artifactId>
                <version>${jna.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jetbrains</groupId>
                <artifactId>annotations</artifactId>
                <version>${jetbrains.annotation.version}</version>
            </dependency>
            <dependency>
                <groupId>org.codehaus.woodstox</groupId>
                <artifactId>stax2-api</artifactId>
                <version>${stax2-api.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-enforcer-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <dependencyConvergence/>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <release>${java.version}</release>
                    <forceJavacCompilerUse>true</forceJavacCompilerUse>
                    <parameters>true</parameters>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>confluent</id>
            <name>Confluent</name>
            <url>https://packages.confluent.io/maven</url>
        </repository>
    </repositories>

</project>
